--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ Layout/LineLength:
     - realize.gemspec
 
 Metrics/BlockLength:
-  ExcludedMethods:
+  IgnoredMethods:
     - let
     - it
     - describe
